Bug 44723 - glReadPixels broken for OSMesa
Summary: glReadPixels broken for OSMesa
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-12 06:53 UTC by Kevin Hobbs
Modified: 2012-01-12 12:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
add renderbuffer mapping/unmapping functions to osmesa (3.46 KB, patch)
2012-01-12 10:55 UTC, Brian Paul
Details | Splinter Review

Description Kevin Hobbs 2012-01-12 06:53:48 UTC
glReadPixels has been broken for an OSMesa render window since early Nov.
Comment 1 Brian Paul 2012-01-12 10:55:18 UTC
Created attachment 55519 [details] [review]
add renderbuffer mapping/unmapping functions to osmesa

Can you try the attached patch?  It fixed my test case here.
Comment 2 Kevin Hobbs 2012-01-12 11:14:07 UTC
(In reply to comment #1)

This patch takes the number of VTK OSMesa test failures from 331 to 3. So I'd say it works.
Comment 3 Brian Paul 2012-01-12 12:50:46 UTC
Great. Pushed as commit cb254b75d7d971b3f1baab45a82cedf0bd6c36c4


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.